tests/ui-unstable/non-lit.stderr
error: argument must be a single string literal
 --> $DIR/non-lit.rs:6:5
  |
6 |     indoc!(fail);
  |     ^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
